# eigenlayer-beacon-oracle

./: .env  .env.example  .gitignore  .gitmodules  Cargo.toml  README.md  cost_1041763_1135503.csv
abi/: EigenlayerBeaconOracle.abi.json
contracts/: .gitignore  foundry.toml
contracts/script/: DeployEigenLayerBeaconOracle.s.sol  TestBeaconRootsPrecompile.s.sol
contracts/src/: EigenLayerBeaconOracle.sol  IBeaconChainOracle.sol
scripts/: cost.rs
src/: contract.rs  lib.rs  main.rs  request.rs  types.rs
