[package]
name = "eigenlayer-beacon-oracle"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.80"
reqwest = "0.11"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
beacon-api-client = {git = "https://github.com/ralexstokes/ethereum-consensus" }
