[package]
name = "eigenlayer-beacon-oracle"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "cost"
path = "scripts/cost.rs"

[dependencies]
anyhow = "1.0.80"
tokio = { version = "1", features = ["full"] }
dotenv = "0.15.0"
ethers = "2.0.13"
ethers_aws = "0.1.0"
reqwest = "0.11.26"
clap = "4.4.9"
serde_json = "1.0.114"
env_logger = "0.11.3"
log = "0.4.21"
